--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
 .App {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+.background-img {
+  width: 100%;
+  height: 550px;
+  overflow: hidden;
+}
+
+.background-img img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover; /* or contain */
+}
+
+.center-name {
+  position: absolute;
+  top: 145px;
+  align-items: center;
+  color: #fff;
+  margin-left: 450px;
+}
+
+.center-name h1 {
+  font-size: 60px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.center-name p {
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: -30px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pro-badge {
+  display: inline-block;
+  background-color: #f0f0f0;
+  color: #333;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 8px 10px;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  margin-left: 8px;
+  margin-top: -60px;
+  vertical-align: middle;
+  font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Navbar {
+  position: fixed;
+  top: 0;
+  width: 80%; /* ya 1000px, jitna chhota chahiye */
+  height: 40px;
+  margin-left: 130px;
+  margin-top: 15px;
+  /* margin: 15px auto; center mein lane ke liye */
+  background: #ebe9e9;
+  padding: 10px 20px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.title {
+  font-size: 15px;
+  font-weight: bold;
+  color: rgb(110, 109, 109);
+}
+
+.right-side {
+  display: flex;
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  list-style: none;
+}
+
+ul li {
+  gap: 10;
+  list-style: none;
+  margin: 12px;
+  font-size: 15px;
+  color: rgb(110, 109, 109);
+  font-weight: 500;
+}
+
+.menu-bar {
+  margin-right: 10px;
+}
+
+.down-arrow {
+  margin-left: 5px;
+  /* margin-top: 10px; */
+}
+
+.down-btn {
+  height: 30px;
+  margin-top: 20px;
+
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: none;
+  cursor: pointer;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  letter-spacing: 0.02857em;
+  min-width: 64px;
+  display: inline-flex;
+  -webkit-box-pack: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-align: center;
+  align-items: center;
+  font-weight: 700;
+  border-radius: 0.5rem;
+  line-height: 1.4;
+  text-align: center;
+  user-select: none;
+  transition: 150ms ease-in;
+  min-height: 2rem;
+  background-image: linear-gradient(
+    195deg,
+    rgb(73, 163, 241),
+    rgb(26, 115, 232)
+  );
+  box-shadow: rgba(26, 115, 232, 0.15) 0rem 0.1875rem 0.1875rem 0rem,
+    rgba(26, 115, 232, 0.2) 0rem 0.1875rem 0.0625rem -0.125rem,
+    rgba(26, 115, 232, 0.15) 0rem 0.0625rem 0.3125rem 0rem;
+  color: rgb(255, 255, 255);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section {
+  margin-left: 22px;
+  margin-right: 10px;
+  background-color: #ebe9e9;
+  margin-top: -90px;
+  width: 97%;
+  border-radius: 10px;
 }
