--- a/src/components/Materialkit/Materialkit.css
+++ b/src/components/Materialkit/Materialkit.css
@@ -10,28 +10,30 @@
   /* margin-left: -40%; */
   width: 350px;
   height: 400px;
-  background: #026cf6;
   opacity: 0.5;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 12px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+
   text-align: center;
-  padding: 20px;
   background-size: cover;
   background-position: center;
-  padding-right: 50px;
 }
 
 .card-content {
+  transition: transform 0.6s;
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: transform 0.6s;
   transform-style: preserve-3d;
   position: relative;
+  background-color: #007bff;
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  padding: 10px;
 }
 
 .materialkit-left:hover .card-content {
@@ -47,13 +49,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   font-size: 1.5rem;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 10px;
-}
-
-flip-card-front {
-  background-color: #ffffff;
 }
 
 .flip-card-back {
@@ -75,6 +74,8 @@ flip-card-front {
 .card-description {
   font-size: 14px;
   line-height: 1.5;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .material-right {
